--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -165,14 +165,13 @@ $bg-color-transparent: rgba(0 0 0 / 70%);
 
 .v-card.running-game-teaser {
   overflow: visible;
-  margin-right: 220px;
+  height: 100%;
+  max-width: 100%;
+  overflow: hidden;
 
   .game-teaser-image-holder {
     display: block;
     position: relative;
-    padding-top: 80%;
-    width: 100%;
-    min-height: 360px;
   }
 
   .game-teaser-image {
@@ -195,21 +194,12 @@ $bg-color-transparent: rgba(0 0 0 / 70%);
 
   .game-teaser-inner {
     border-radius: 4px;
-    position: absolute;
-    top: 20px;
-    bottom: 20px;
-    left: calc(100% - 40px);
-    width: 240px;
     background: rgba(0 0 0 / 60%);
     padding: 1em;
     font-size: 15px;
     text-shadow: 1px 1px 3px #000;
 
     .game-teaser-buttons {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
       padding: 1em;
     }
   }
@@ -248,7 +238,6 @@ $bg-color-transparent: rgba(0 0 0 / 70%);
   }
 
   .game-teaser-inner {
-    position: absolute;
     inset: 0;
     background: rgba(0 0 0 / 10%);
     padding: 1em;
@@ -310,6 +299,9 @@ $bg-color-transparent: rgba(0 0 0 / 70%);
   height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  &.v-container{
+    padding: 0px 8vw;
+  }
 }
 
 .filters {
